--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,8 @@ analyzer:
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
-
+  exclude:
+    - '**/*.g.dart'
 linter:
   rules:
     # - prefer_const_constructors
