--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
