--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   youtube_player_flutter: ^8.1.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
